--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "react": "^19.0.0",
