--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "recharts": "^3.1.0",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "zod": "^3.25.76"
+    "zod": "^3.25.76",
+    "zod-form-data": "^3.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
